--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -327,7 +327,7 @@
             </div>
           </div>
         </div>
-        <div class="row" ng-show="vm.aditionals.penalization.length > 0 || vm.aditionals.discount > 0">
+        <div class="row" ng-show="vm.aditionals.penalization.length > 0 || vm.aditionals.discount.length > 0">
           <div class="col-sm-10 col-md-offset-1">
             <div class="panel panel-default">
               <div class="panel-heading detail-pay text-center">Multas y/o Descuentos individuales</div>
