--- a/modules/core/client/views/dashboard/dashboard.client.view.html
+++ b/modules/core/client/views/dashboard/dashboard.client.view.html
@@ -31,6 +31,14 @@
       </p>
       SERVICIO DE AGUA
     </div>
+    <div class="col-sm-6 col-md-3">
+      <p>
+        <a href="">
+          <i class="fa fa-handshake-o fa-5x" aria-hidden="true"></i>
+        </a>
+      </p>
+      REFINANICIAMIENTO DE CUOTAS
+    </div>
 <!--     <div class="col-sm-6 col-md-3">
 
       <p><a ui-sref="service-aditional" ><i class="fa fa-usd fa-5x"></i></a></p>
@@ -42,8 +50,7 @@
     </div>  -->
   </div>
 
-
-  <div class="alert alert-danger" role="alert" ng-show="vm.contract" style="color: #af4342">
+  <div class="alert alert-danger" role="alert" ng-show="vm.contract" style="color: #af4342;">
     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
     <span class="sr-only">Error:</span>
     No tienes ningun departamento asignado, por favor comunícate con gerencia.
@@ -63,7 +70,7 @@
 <br/>
 <br/>	
 <hr>
-<div class="col-md-4">
+<div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4" style="margin-top: 50px;">
   <table class="table">
     <thead>
       <th>Item </th>
