--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -215,7 +215,13 @@
             <tr>
               <th colspan="2">WEBSITE:</th>
               <td colspan="2">{{ vm.condominiumDetails.website }}</td>
-            </tr>                    
+            </tr>
+            <tr>
+              <th style="text-align: center"><img src="http://www.freeiconspng.com/uploads/whatsapp-icon-3.png" width="16px" height="16px"></th>
+              <td><b>944733600</b></td>
+              <th>VENCIMIENTO:</th>
+              <td>{{ vm.due_date }}</td>              
+            </tr>                                 
           </table>          
         </div>
         <div class="col-sm-3 hidden-xs">
